samples/bad/bad028.lat
// Variable declaration as an only if instruction

int main () {
 if(true)
    1+1;
  else
    int x;
 return 0 ;
}